BlockingQueue and demo programs